# hello-scikit-build-core

./: CMakeLists.txt  README.md  Rectangle.cpp  Rectangle.h  pyproject.toml  rect.pyx
